# Multi-Agent-System

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
backend/: railway.json  requirements.txt
backend/app/: _util.py  bilateral.py  config.py  data.py  llm.py  memory.py  observability.py  security.py  server.py  shaping.py  state.py
backend/app/agents/: coach.py  workout_generator.py  workout_logger.py
backend/app/evals/: routing.py
backend/app/hub/: graph.py  router.py
backend/app/tools/: build_workout.py  normalize.py  schemas.py  search_exercises.py
backend/evals_results/: README.md  routing-20260603T142227Z.json
backend/scripts/: demo.py  eval_routing.py
backend/tests/: conftest.py  test_coach_grounding.py  test_coach_memory.py  test_context.py  test_evals.py  test_generator_rich.py  test_graphs.py  test_live.py  test_logger.py  test_memory.py  test_normalize.py  test_observability.py  test_prod_hardening.py  test_reason_feedback.py  test_resilience.py  test_router.py  test_security.py  test_shaping.py  test_stretch.py  test_tools.py
docs/: DEPLOY.md
frontend/: .env.example  index.html  package-lock.json  package.json  railway.json  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1780433099616-1336a90d3ccf2.mjs
frontend/src/: App.js  App.tsx  api.js  api.ts  index.css  types.ts
frontend/src/components/: AssistantTurn.js  AssistantTurn.tsx  (+23 more)
frontend/tests/: LogEntry.test.js  LogEntry.test.tsx  RouteBadge.test.js  RouteBadge.test.tsx  WorkoutCard.test.js  WorkoutCard.test.tsx  viewport.test.tsx
(+4 files in other folders)
